# PicToMusic

./: .gitignore  Makefile  README.md  app.py  packages.txt  parser.py  pyproject.toml  requirements.txt
UI/: pparser_app_logic.py  statics.py  streamlit_app_logic.py
configs/: predict_config.yaml  training_config.yaml
notebooks/: labelizer.ipynb  mei_reader.ipynb  model.ipynb  pipeline.ipynb
pages/: 0_End2End_Pipeline.py  1_PParser.py  2_YOLO_Parser.py  3_Note_Classification.py  3_Note_Detection.py
pic2music/: __init__.py  parser.py
roadmap/: README.md
src/p2m/: cli.py  converter.py  converter2.py  labelizer.py  mei2abc.py  model.py  parser.py  scoretyping.py  utils.py  yolo2music.py
src/p2m/converter/: __init__.py  convert_xml.py  converter_abc.py  converter_yolo.py  mapping.py
src/sonatabene/: cli.py  labelizer.py  model.py  parser.py  utils.py
src/sonatabene/converter/: convert_xml.py  converter_abc.py  converter_yolo.py
tests/: test_converters.py  test_parser.py
