[project]
name = "p2m"
version = "0.1.0"
description = "A Python package for converting sheet music images to MIDI files using computer vision and deep learning techniques. PicToMusic (P2M) analyzes musical scores and translates them into playable digital format."
authors = [
    {name = "Augustin Morval",email = "augustin.morval.pro@gmail.com"},
    {name = "Mathieu Jayet",email = "mathieu.jayet@yahoo.fr"},
    {name = "Jérémy Pahler",email = "jeremy.pahler@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "imutils (>=0.5.4,<0.6.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "scipy (>=1.12.0,<2.0.0)",
    "tensorflow (>=2.15.0,<3.0.0)",
    "ultralytics (>=8.3.97,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
